# my-llm-sdk

./: .gitignore  CODE_REVIEW_REPORT.md  GEMINI.md  LICENSE  README.md  README_en.md  README_zh.md  ROADMAP.md  benchmark.py  config.example.yaml  llm.project.yaml  pyproject.toml  pytest.ini  task_status.md  verify_all.py  verify_async.py  verify_streaming.py  verify_structured.py
audio/: Dad_voice.m4a  asr_client.py  batch_covers.py  config.py  llm.py  scan.py  voice_enroll.py  vtt_utils.py
docs/: requirements_raw.md
llm.project.d/: google.yaml  qwen.yaml  volcengine.yaml
outputs/: Dad_voice_transcript.txt
plan/: .plan_07_V0.2.0_Spec.md.swp  plan_01_Total_Plan.md  plan_02_Config_System.md  plan_03_Budget_Control.md  plan_04_Doctor_And_Diagnostics.md  plan_05_Client_API_Initialization.md  plan_06_Async_Ledger_Spec.md  plan_07_V0.2.0_Spec.md  plan_09_Refactor_Src_Layout.md
scripts/: benchmark.py  benchmark_unified.py  cleanup_test_data.py  debug_rest_intl.py  recalc_costs.py
src/: cli.py  client.py  schemas.py
tests/: benchmark_latency.py  benchmark_poem_illustration.py  conftest.py  debug_gemini_direct.py  e2e_audio_asr_only.py  e2e_audio_matrix.py  e2e_image_generation.py  e2e_model_matrix.py  e2e_sdk_realtime_clone.py  experiment_voice_clone.py  experiment_voice_clone_realtime.py  stress_async_vision.py  stress_qwen_routing.py  test_async_ledger.py  test_budget_control.py  test_client_flow.py  test_config_injection.py  test_config_merge.py  test_doctor.py  test_gemini_config.py  test_gemini_contract.py  test_gemini_image_gen.py  test_multimodal_billing.py  (+8 more)
(+61 files in other folders)
